# SyslogKit

./: CMakeLists.txt  README.md
client/: CMakeLists.txt
client/src/: ApplicationMain.cpp  MainWindow.cpp  MainWindow.hpp
common/: CMakeLists.txt
common/inc/SyslogKit/: LogStorage  LogStorage.hxx  SyslogProto.hxx  SyslogServer  SyslogServer.hxx
common/src/: LogStorage.cc  SyslogProto.cc  SyslogServer.cc
server/: CMakeLists.txt
server/src/: ServerMain.cc  SocketWrapper.H
